# vocolo

./: .editorconfig  .env.example  .env.sample  .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml
api/: Cargo.toml
api/src/: main.rs  routes.rs
api/src/routes/: v1.rs
api/src/routes/v1/: osu.rs
api/src/routes/v1/osu/: mappools.rs  matchups.rs  tournaments.rs
api/src/routes/v1/osu/tournaments/: staff.rs  teams.rs
apps/api/: Cargo.toml
apps/api/src/: error.rs  main.rs  route.rs
apps/api/src/app/: app.module.ts
apps/api/src/app/users/: users.controller.ts  users.service.ts
apps/api/src/route/: internal.rs  osu.rs
apps/api/src/route/osu/: tournament.rs
bot/: Cargo.toml
bot/src/: main.rs
bot/src/commands/: ping.rs
common/: Cargo.toml
common/src/: constants.rs  lib.rs
common/src/helper/: osu.rs
common/src/models/: osu.rs  user.rs
database/: Cargo.toml
database/src/: database.rs  lib.rs  models.rs
database/src/bridge/v1/: osu.rs
database/src/models/: osu.rs
database/src/models/osu/: mappool.rs  mappool_ops.rs  matchup.rs  matchup_ops.rs  tournament.rs  tournament_ops.rs
entity/: Cargo.toml  README
entity/src/: identities.rs  lib.rs  osu_mappool.rs  osu_team.rs  osu_tournament.rs  prelude.rs  sessions.rs  user.rs
internal/: Cargo.toml
internal/src/: auth.rs  error.rs  lib.rs
internal/src/auth/: connection.rs  permission.rs  user.rs
libs/core/: Cargo.toml
libs/core/src/: lib.rs  util.rs
libs/core/src/util/: response.rs
libs/db-entities/: Cargo.toml
libs/db-entities/src/: lib.rs  osu_team.rs  osu_tournament.rs  user.rs
libs/db-migrations/: Cargo.toml
libs/db-migrations/src/: lib.rs  m20240204_014628_create_table.rs  main.rs
libs/models/: Cargo.toml
libs/models/src/: error.rs  lib.rs  osu.rs  user.rs
libs/models/src/osu/mappool/: dto.rs  handler.rs  model.rs
libs/models/src/osu/team/: dto.rs  handler.rs  model.rs
libs/models/src/osu/tournament/: dto.rs  handler.rs  model.rs
libs/models/src/user/: dto.rs  handler.rs  model.rs
migration/: Cargo.toml
migration/src/: m20240204_014628_create_table.rs  main.rs
models/: Cargo.toml
models/src/: lib.rs
models/src/v1/: osu.rs
models/src/v1/osu/: mappool.rs  matchup.rs  tournament.rs
server/: Cargo.toml
server/src/: main.rs
server/src/repository/: mod.rs  mongo.rs  osu.rs  user.rs
server/src/routes/: auth.rs  mod.rs  osu.rs
server/src/routes/osu/: mappools.rs  matches.rs  mod.rs  players.rs  teams.rs  tournaments.rs
server/src/util/: auth.rs
src/: constants.rs  error.rs  main.rs  models.rs  routes.rs  util.rs
src/helper/: mod.rs  osu.rs
src/models/: mod.rs  osu.rs  tournament.rs  tournaments.rs  user.rs
src/models/osu/: game_match.rs  mappool.rs  mod.rs  team.rs  tournament.rs  tournaments.rs
src/repository/: mod.rs  model.rs  osu.rs  user.rs
src/repository/osu/: matches.rs  mod.rs  tournaments.rs
src/routes/: auth.rs  internal.rs  mod.rs  osu.rs  users.rs
src/routes/osu/: mappools.rs  matches.rs  mod.rs  players.rs  teams.rs  tournament.rs  tournament_register.rs  tournaments.rs
src/routes/osu/tournaments/: mappools.rs  matches.rs  mod.rs  players.rs  staff.rs  teams.rs
src/util/: auth.rs  constants.rs  env.rs  mod.rs
vocolo/: Cargo.toml
vocolo/src/: main.rs
vocolo/src/models/: tournaments.rs  user.rs
vocolo/src/models/osu/: mod.rs  tournaments.rs
vocolo/src/repository/: mod.rs  model.rs  osu.rs
vocolo/src/routes/: auth.rs  mod.rs  users.rs
vocolo/src/routes/osu/tournaments/: mappools.rs  matches.rs  mod.rs  staff.rs
vocolo/src/util/: auth.rs
vocolo_macros/: Cargo.toml
