[package]
name = "vocolo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }

axum = "0.6.18"
axum-macros = "0.3.7"

mongodb = "2.0"
bson = { version = "2.6.1", features = ["serde_with"] }

oauth2 = "4.3.0"
reqwest = { version = "0.11", features = ["json"] }

futures = "0.3.28"

async-trait = "0.1.66"
lazy_static = "1.4.0"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"
strum = "0.24.1"
strum_macros = "0.24"

validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0.40"

bytes = "1.4.0"

dotenvy = "0.15.6"
