[workspace]
members = [".", "entity", "migration"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3"
repository = "https://github.com/vncommunityleague/vocolo"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }

sea-orm = { version = "1.0.0-rc.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "with-chrono"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
garde = { version = "0.18", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

[package]
name = "vocolo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vocolo-migration = { path = "migration" }
vocolo-entity = { path = "entity" }

tokio.workspace = true

axum = { version = "0.7", features = ["macros"] }
axum_garde = "0.18"
tower-http = { version = "0.5.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
hyper = "1.2"
http = "1.1"

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
garde.workspace = true

thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

sea-orm.workspace = true
