[workspace]
members = ["api", "database", "models", "internal"]
resolver = "2"

[workspace.package]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/vncommunityleague/vocolo"
repository = "https://github.com/vncommunityleague/vocolo"
license = "AGPL-3.0"
license-file = "LICENSE"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

axum = { version = "0.7" }
http = "1.1"
reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

bson = { version = "2.10.0", features = ["chrono-0_4", "serde_with-3"] }
garde = { version = "0.20", features = ["derive"] }

thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
