[package]
name = "vocolo-api"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
vocolo-internal = { path = "../internal", features = ["axum"] }
vocolo-models = { path = "../models" }
vocolo-database = { path = "../database" }

tokio.workspace = true
futures.workspace = true

http.workspace = true
http-body = "1.0"
tower = "0.4"

axum = { workspace = true, features = ["http2", "macros"] }
axum_garde = "0.20"

bson.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

bytes = "1.6"

garde.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
