[package]
name = "common"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb.workspace = true
serde.workspace = true
rosu-v2.workspace = true
strum.workspace = true
strum_macros.workspace = true
uuid.workspace = true

dotenvy.workspace = true
