[package]
name = "vocolo-entity"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
sea-orm.workspace = true
serde.workspace = true

[build-dependencies]
tokio.workspace = true
sea-orm-cli = { version = "1.0.0-rc.1", features = ["cli", "codegen", "runtime-tokio-rustls"] }
