[package]
name = "vocolo-internal"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[features]
axum = ["dep:axum"]

[dependencies]
axum = { workspace = true, optional = true }

ory-keto-client = "0.11.0-alpha.0"

bson.workspace = true

http.workspace = true
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true

thiserror.workspace = true
log = "0.4.21"
