[package]
name = "vocolo-migration"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
tokio.workspace = true
sea-orm-migration = { version = "1.0.0-rc.1", features = ["cli", "sqlx-postgres", "runtime-tokio-rustls", "with-json", "with-chrono"] }
