[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
actix-rt.workspace = true

serde.workspace = true

rosu-v2.workspace = true
lazy_static.workspace = true

mongodb.workspace = true

common.workspace = true
