[package]
name = "vocolo-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vocolo-core = { path = "../../libs/core", features = ["axum"] }
vocolo-models = { path = "../../libs/models", features = ["axum"] }

tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
garde.workspace = true

thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum.workspace = true
axum_garde.workspace = true

sea-orm.workspace = true

dotenvy.workspace = true
