[package]
name = "vocolo-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
axum = ["dep:axum"]

[dependencies]
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = { workspace = true, optional = true }

dotenvy.workspace = true
