[package]
name = "vocolo-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
axum = ["dep:axum", "vocolo-core/axum"]

[dependencies]
vocolo-database-entities = { path = "../db-entities" }
vocolo-database-migrations = { path = "../db-migrations" }

vocolo-core = { path = "../core" }

axum = { workspace = true, optional = true }

sea-orm.workspace = true

serde.workspace = true
chrono.workspace = true
garde.workspace = true

thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
